--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
+   <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <div id="main">
-            <header>
+            <header class="header">
                 <h1 id="title">freeCodeCamp Survey Form</h1>
                 <p id="description">Thank you for taking the time to help us improve the platform</p>
             </header>    
@@ -23,7 +23,7 @@
                 </div>
                 <div class="form-group">
                     <label id="drop-down-label" for="drop-down">Which option best describes your current role?</label>
-                    <select id="drop-down" type="text" placeholder="Select current level" required>
+                    <select id="drop-down" class="form-control" placeholder="Select current level" required>
                         <option value = "1">Student</option>
                         <option value = "2">Junior Dev</option>
                         <option value = "3">Intermediate Dev</option>
@@ -32,16 +32,16 @@
                 </div>
                 <div class="form-group">
                     <label for="recommend">Would you recommend freeCodeCamp to a friend?
-                        <input class="input-radio" type="radio" name="recommend" value="definitely">Definitely
-                        <input class="input-radio" type="radio" name="recommend" value="maybe">Maybe
-                        <input class="input-radio" type="radio" name="recommend" value="not sure">Not sure
+                        <div id="radio"><input class="input-radio" type="radio" name="recommend" value="definitely">Definitely</div>
+                        <div id="radio"><input class="input-radio" type="radio" name="recommend" value="maybe">Maybe</div>
+                        <div id="radio"><input class="input-radio" type="radio" name="recommend" value="not sure">Not sure</div>
                     </label>
                 </div>
                 <div class="form-group">    
                     <label for="improvements">What would you like to see improved? (Check all that apply)
-                        <input class="input-checkbox" type="checkbox" name="improvement" value="front-end">Front-end
-                        <input class="input-checkbox" type="checkbox" name="improvement" value="back-end">Back-end
-                        <input class="input-checkbox" type="checkbox" name="improvement" value="projects">Projects
+                        <div id="checkbox"><input class="input-checkbox" type="checkbox" name="improvement" value="front-end">Front-end</div>
+                        <div id="checkbox"><input class="input-checkbox" type="checkbox" name="improvement" value="back-end">Back-end</div>
+                        <div id="checkbox"><input class="input-checkbox" type="checkbox" name="improvement" value="projects">Projects</div>
                     </label>
                 </div>
                 <div class="form-group">
