--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="form-group">
                     <label for="recommend">Would you recommend freeCodeCamp to a friend?
-                        <div id="radio"><input class="input-radio" type="radio" name="recommend" value="definitely">Definitely</div>
+                        <div id="radio"><input class="input-radio" type="radio" name="recommend" value="definitely" checked="">Definitely</div>
                         <div id="radio"><input class="input-radio" type="radio" name="recommend" value="maybe">Maybe</div>
                         <div id="radio"><input class="input-radio" type="radio" name="recommend" value="not sure">Not sure</div>
                     </label>
